# Rust-Graphql-Cynic

./: .gitignore  Cargo.toml  Trunk.toml  build.rs  index.html  package-lock.json  schema.graphql
public/: output.css
src/: main.rs
src/pages/home/: mod.rs  query.rs
src/routes/: mod.rs
