[package]
name = "Graphql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leptos = {version = "0.5.4", features = ["nightly", "csr"]}
leptos_router = {version = "0.5.4", features = ["nightly", "csr"]}

cynic = {version = "3.3.0", features = ["http-reqwest"]}

[dev-dependencies]
insta = {version = "1.34.0"}

[build-dependencies]
cynic-codegen = {version = "3.3.0"}